--- a/signup.html
+++ b/signup.html
@@ -46,7 +46,7 @@
              <div class="cntner">
                  <div class="row no-gutters">
                      <div class="col-lg-5">
-                         <img src="./image/clipart3633277.png"alt="" class="img-fluid">
+                         <img src="./image/clipart3633277.png"alt="" class="img-fluid img-responsive">
                      </div>
                      <div class="col-lg-7 px-7 pt-5">
                          <h1 class=" font-weight-bold py-3">Kerala Tourism</h1>
