--- a/login.html
+++ b/login.html
@@ -14,6 +14,7 @@
 
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+<script src="lg.js"></script>
 </head>
 <body>
     
@@ -51,20 +52,23 @@
                      <div class="col-lg-7 px-7 pt-5">
                          <h1 class=" font-weight-bold py-3">Kerala Tourism</h1>
                          <h4>Sign into your account</h4>
-                         <form>
+                         <form action="dest.html"onsubmit="return validation()">
                              <div class="foam-row">
                                  <div class="col-lg-7">
-                                     <input type="email" placeholder="Email-Address" class="form-control my-3 p-4">
+                                    <input type="text" placeholder="User Name" class="form-control my-3 p-4" id="user" autocomplete="off">
+                                    <span id="username" class="text-danger font-weight-bold"> </span>
+                                   
                                  </div>
                              </div>
                              <div class="foam-row">
                                 <div class="col-lg-7">
-                                    <input type="password" placeholder="Enter password" class="form-control">
+                                    <input type="password" placeholder="Enter password" class="form-control" id="password">
+                                    <span id="passwordd" class="text-danger font-weight-bold"> </span>
                                 </div>
                             </div>
                             <div class="foam-row">
                                 <div class="col-lg-7">
-                                   <button type="button" class="btn1 mt-3 mb-5">Login</button>
+                                   <button class="btn1 mt-3 mb-5">Login</button>
                                 </div>
                             </div>
                             <p>Don't have an account? <a href="signup.html">Create here</a></p>
